--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -8,28 +8,58 @@
     android:paddingTop="@dimen/activity_vertical_margin"  
     tools:context=".MainActivity"
     android:orientation="vertical" 
-    android:layout_gravity="center_horizontal">
+    android:layout_gravity="center_horizontal"
+    android:background="#D4929A">
+
+    	<ImageView
+    	    android:layout_width="200dip"
+    	    android:layout_height="80dip"
+    	    android:src="@drawable/new_players" 
+    	    android:scaleType="centerInside"
+    	    android:layout_gravity="center_horizontal"/>
+
     	<com.entity.MySurfaceView android:id="@+id/sView"
   	    android:layout_height="0dip"
-  	    android:layout_width="0dip"/>
-	    <Button 
-	        android:id="@+id/takePicBtn"
-	        android:layout_width="fill_parent"
-	        android:layout_height="20dip"
-	        android:layout_marginBottom="15dp"
-		    android:layout_weight="1"
-	        android:text="@string/str_take" />  
-	    <Button android:id="@+id/switchBtn"
-	        android:layout_width="fill_parent"
-	        android:layout_height="20dip"
-	        android:layout_marginBottom="15dp"
-	        android:layout_weight="1"
-	        android:text="@string/str_switch"/>
-	    <Button  
+  	    android:layout_width="0dip"
+  	    android:layout_gravity="center_horizontal"/>
+    	<LinearLayout android:orientation="horizontal"
+    	    android:layout_width="wrap_content"
+    	    android:layout_height="wrap_content"
+    	    android:layout_gravity="center_horizontal">
+		    <ImageView 
+		        android:id="@+id/takePicBtn"
+		        android:layout_width="50dip"
+		        android:layout_height="50dip"
+		        android:layout_gravity="left|center_vertical"
+		        android:src="@drawable/switch_camera"/>  
+
+		    <ImageView
+		        android:id="@+id/switchBtn"
+		        android:layout_width="50dip"
+		        android:layout_height="50dip"
+		        android:layout_gravity="right|center_vertical" 
+		        android:layout_marginLeft="40dip"
+		        android:src="@drawable/camera"/>
+    	    
+    	</LinearLayout>
+		<TextView android:layout_gravity="center_horizontal"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Join the game by taking photo!"/>
+		<TextView android:layout_gravity="center_horizontal"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Min Players:7  Max Players: 15"/>
+		<TextView android:id="@+id/cameraTxt"
+		    android:layout_gravity="center_horizontal"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:text="Now we have 0 players"/>
+	    <ImageView
 	        android:id="@+id/showPicBtn"  
 	        android:layout_width="fill_parent"  
 	        android:layout_height="wrap_content"  
 	        android:layout_marginBottom="15dp"  
 		    android:layout_weight="1"
-	        android:text="@string/str_show" />  	    
+	        android:text="@string/str_show" />
 </LinearLayout>
