--- a/res/layout/activity_role_assign.xml
+++ b/res/layout/activity_role_assign.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${relativePackage}.${activityClass}" >
+    tools:context="${relativePackage}.${activityClass}" 
+    android:background="#D4929A">
 
     <TextView android:id="@+id/hintTxt"
         android:layout_width="wrap_content"
