--- a/res/layout/activity_init.xml
+++ b/res/layout/activity_init.xml
@@ -6,8 +6,8 @@
     android:background="#D4929A"
     android:orientation="vertical">
 	<ImageView android:src="@drawable/header"
-	    android:layout_height="200dip"
-	    android:layout_width="200dip"
+	    android:layout_height="300dip"
+	    android:layout_width="300dip"
 	    android:scaleType="centerInside"
 	    android:layout_gravity="center_horizontal"/>
 	<ImageView android:id="@+id/startBtn"
@@ -19,8 +19,9 @@
 	    android:layout_gravity="center_horizontal"/>
 	<LinearLayout
 	    android:layout_marginTop="50dip"
-	    android:layout_width="wrap_content"
+	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
+	    android:layout_gravity="bottom"
 	    android:orientation="horizontal">
 		<LinearLayout 
 	        android:orientation="vertical" 
