--- a/res/layout/activity_judge_select.xml
+++ b/res/layout/activity_judge_select.xml
@@ -1,15 +1,38 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" 
-    android:background="#D4929A">
-	<ListView android:id="@+id/jdgSelList"
-	    android:layout_height="wrap_content"
-	    android:layout_width="150dip"/>
-	<Button android:id="@+id/jdgSelBtn"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="Select"/>
-	    
-</RelativeLayout>
+    android:background="#D4929A"
+    android:orientation="vertical">
+    <ImageView android:src="@drawable/choose_judge"
+        android:scaleType="centerInside"
+        android:layout_width="300dip"
+        android:layout_height="60dip"
+        android:layout_gravity="center_horizontal"/>
+    <LinearLayout 
+        android:orientation="horizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+		<ListView android:id="@+id/jdgSelList"
+		    android:layout_height="wrap_content"
+		    android:layout_width="200dip"/>
+		<LinearLayout android:orientation="vertical"
+		    android:layout_height="fill_parent"
+		    android:layout_width="wrap_content"
+		    android:layout_gravity="center_horizontal"
+		    android:layout_marginLeft="20dip">
+			<ImageView android:id="@+id/showPic_judge"
+			    android:layout_width="100dip"
+			    android:layout_height="100dip"
+			    android:background="#D4929A"
+			    android:layout_gravity="center_horizontal"/>
+			<ImageView android:id="@+id/jdgSelBtn"
+			    android:layout_width="wrap_content"
+			    android:layout_height="wrap_content"
+			    android:paddingTop="200dip"
+			    android:layout_gravity="center_horizontal"
+			    android:src="@drawable/yes"/>
+		</LinearLayout>
+    </LinearLayout>
+</LinearLayout>
