--- a/res/layout/player_pics.xml
+++ b/res/layout/player_pics.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/p1"
-    android:layout_width="150dip"
-    android:layout_height="150dip"
-    android:layout_gravity="center">
+    android:layout_width="200dip"
+    android:layout_height="100dip"
+    android:layout_gravity="center"
+    android:background="@drawable/chosen">
     <ImageView android:id="@+id/playerPic_judge"
         android:layout_width="100dip"
         android:layout_height="100dip"
         android:background="#00000000"
-        android:layout_centerHorizontal="true"
+        android:paddingLeft="10dip"
         android:layout_centerVertical="true"
         android:contentDescription="@string/str_defaultDesc"/>
 </RelativeLayout>
