--- a/res/layout/players.xml
+++ b/res/layout/players.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/p1"
-    android:layout_width="100dip"
-    android:layout_height="100dip">
+    android:layout_width="80dip"
+    android:layout_height="80dip">
     <ImageView android:id="@+id/playerPic"
-        android:layout_width="100dip"
-        android:layout_height="100dip"
+        android:layout_width="80dip"
+        android:layout_height="80dip"
         android:background="#00000000"
         android:contentDescription="@string/str_defaultDesc"/>
     <Button android:id="@+id/remBtn"
-        android:layout_width="30dip"
-        android:layout_height="30dip"
-        android:background="@drawable/remove"/>
+        android:layout_width="20dip"
+        android:layout_height="20dip"
+        android:background="@drawable/cross"/>
 </RelativeLayout>
