--- a/res/layout/activity_role_assign.xml
+++ b/res/layout/activity_role_assign.xml
@@ -1,19 +1,32 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="${relativePackage}.${activityClass}" 
-    android:background="#D4929A">
-
-    <TextView android:id="@+id/hintTxt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    android:background="#D4929A"
+    android:orientation="vertical"
+    android:id="@+id/roleAssignLayout">
+	<ImageView android:src="@drawable/check_id"
+	    android:layout_width="300dip"
+	    android:layout_height="60dip"
+	    android:layout_gravity="center_horizontal"/>
+    <ImageView android:id="@+id/hintTxt"
+        android:layout_width="300dip"
+        android:layout_height="60dip"
+        android:src="@drawable/pass_phone"
+        android:layout_gravity="center_horizontal"/>
 	<ImageView android:id="@+id/playerImg"
+	    android:layout_width="150dip"
+	    android:layout_height="150dip"
+	    android:layout_gravity="center_horizontal"/>
+	<ImageView android:id="@+id/iAmBtn"
+	    android:src="@drawable/i_am"
+	    android:layout_width="200dip"
+	    android:layout_height="100dip"
+	    android:layout_gravity="center_horizontal"/>
+	<ImageView android:id="@+id/nextBtn"
 	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"/>
-	<Button android:id="@+id/nextBtn"
-	    android:text="go on"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"/>
-</RelativeLayout>
+	    android:layout_height="wrap_content"
+	    android:layout_gravity="right|bottom"
+	    android:src="@drawable/yes"/>
+</LinearLayout>
