--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -9,16 +9,17 @@
         android:id="@+id/pause"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="0dp"
-        android:text="="
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:background="@drawable/pause"
     />
     
     <Button
         android:id="@+id/condition"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="0dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="8dp"
         android:text="夜幕降临" />
 
 	<TextView 
@@ -31,37 +32,37 @@
 	 />
 	
 	 <Button
-        android:id="@+id/function"
-        android:layout_width="200dp"
-        android:layout_height="100dp"
-        android:layout_marginTop = "150dp"
-        android:layout_marginLeft = "150dp"
-        android:text="天黑"
-        />
+	     android:id="@+id/function"
+	     android:layout_width="160dp"
+	     android:layout_height="80dp"
+	     android:layout_marginLeft="180dp"
+	     android:layout_marginTop="190dp"
+	     android:background="@drawable/dark"
+	     />
     
     <ImageView
 	    android:id="@+id/head"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop = "40dp"
-        android:layout_marginLeft = "150dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop = "70dp"
+        android:layout_marginLeft = "220dp"
         android:paddingLeft="40dp"
         />
     
     <Button
         android:id="@+id/showperson"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="240dp"
+        android:layout_width="160dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="440dp"
+        android:layout_marginLeft="180dp"
         android:background="@drawable/show_identity" />
 
     <Button
         android:id="@+id/lines"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop = "340dp"
-        android:layout_marginLeft = "150dp"
+        android:layout_width="160dp"
+        android:layout_height="43dp"
+        android:layout_marginTop = "390dp"
+        android:layout_marginLeft = "180dp"
         android:background="@drawable/voice" 
     />
 
@@ -69,7 +70,12 @@
         android:id="@+id/lv"
         android:layout_width="160dp"
         android:layout_height="match_parent"
-        android:layout_marginLeft="0dp"
-        android:layout_marginTop="40dp" >
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="70dp" 
+        android:fadingEdge="none"  
+        android:listSelector="#00000000"  
+        android:scrollbars="none"
+        >
     </ListView>
 </RelativeLayout>
