--- a/res/layout/listviewitem.xml
+++ b/res/layout/listviewitem.xml
@@ -2,31 +2,36 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="horizontal" >
-
-    <TextView
-        android:id="@+id/item_tv"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="center_vertical"
-         />
-     <ImageView
+    android:orientation="horizontal" 
+    android:background="@drawable/corners_bg"
+    >
+    <!-- android:background="#910B1C" -->
+    
+    
+    <ImageView
         android:id = "@+id/item_ig"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:layout_margin="7dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:gravity="center_vertical"
+        android:radius="5dp"
+        android:background="@drawable/corners_bg">
     </ImageView>
+    
     <ImageView
         android:id = "@+id/item_dis"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_vertical">
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:gravity="center_horizontal">
     </ImageView>
+    
     <CheckBox
         android:id="@+id/item_cb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="200dp"
         android:clickable="false"
         android:focusable="false"
         android:focusableInTouchMode="false" 
