--- a/res/layout/activity_game.xml
+++ b/res/layout/activity_game.xml
@@ -13,14 +13,20 @@
         android:layout_marginLeft="8dp"
         android:background="@drawable/pause"
     />
-    
-    <Button
+
+    <TextView
         android:id="@+id/condition"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="8dp"
-        android:text="夜幕降临" />
+        android:background="@layout/textview_border"
+        android:text="Dark is coming" 
+        android:textSize="20sp"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textColor="#000000"/>
 
 	<TextView 
 	    android:id="@+id/tv"
