--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -64,11 +64,20 @@
 	        android:scaleType="centerInside"
 		    android:layout_weight="1"
 	        android:src="@drawable/yes"/>
-        <ImageView android:id="@+id/showPlayersBtn"
-            android:layout_width="120dip"
-            android:layout_height="20dip"
-            android:layout_gravity="right|center_vertical"
-            android:layout_marginRight="3.0dip"
-            android:background="@drawable/players" />	        
+ 	<RelativeLayout android:layout_height="wrap_content"
+	    android:layout_width="wrap_content"
+	    android:layout_marginTop="20dip"
+	    android:layout_gravity="right">
+		<ImageView android:id="@+id/showPlayersBtn"
+		    android:layout_width="150dip"
+		    android:layout_height="30dip"
+		    android:layout_gravity="center_horizontal"
+		    android:src="@drawable/players" />
+		<ImageView android:src="@drawable/user"
+		    android:layout_marginTop="5dip"
+		    android:layout_marginLeft="5dip"
+		    android:layout_width="20dip"
+		    android:layout_height="20dip"/>
+	</RelativeLayout>
 	        
 </LinearLayout>
